syntax = "proto3";

package plants.v1;

option go_package = "plants/v1;plants_v1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service PlantsAPI {
    rpc GetPlantsWithCareRulesV1 (GetPlantsWithCareRulesV1Request) returns (GetPlantsWithCareRulesV1Response) {
        option (google.api.http) = {
            get: "/api/care"
        };
    };

    rpc CreateNewCareRuleV1 (CreateNewCareRuleV1Request) returns (CreateNewCareRuleV1Response) {
        option (google.api.http) = {
            post: "/api/care/new"
            body: "*"
        };
    };

    rpc GetPlantByIdV1 (GetPlantByIdV1Request) returns (GetPlantByIdV1Response) {
        option (google.api.http) = {
            get: "/api/palnts/{id}"
        };
    };
    rpc GetCareRuleV1 (GetCareRuleV1Request) returns (GetCareRuleV1Response) {
        option (google.api.http) = {
            get: "/api/care/{species}"
        };
    };

    rpc GetPlantsV1 (GetPlantsV1Request) returns (GetPlantsV1Response) {
        option (google.api.http) = {
            get: "/api/plants/{page}/{size}/{sort}"
        };
    };

    rpc CreatePlantV1 (CreatePlantV1Request) returns (CreatePlantV1Response) {
        option (google.api.http) = {
            post: "/api/plants/add"
            body: "*"
        };
    };

    rpc GetFilteredPlantsV1 (GetFilteredPlantsV1Request) returns (GetFilteredPlantsV1Response) {
        option (google.api.http) = {
            post: "/api/palnts/{page}/{size}/{sort}"
            body: "*"
        };
    };
    
    rpc BuyPlantV1 (BuyPlantV1Request) returns (BuyPlantV1Response) {
        option (google.api.http) = {
            post: "/api/plants/buy"
            body: "*"
        };
    };
}

message CreatePlantV1Request {
    string image = 1;
    string place = 2;
    string size = 3;
    float price = 4; 
    string lightCondition = 5;
    string wateringFrequency = 6;
    string temperatureRegime = 7;
    string care_complexity = 8;
    string description = 9;
    string type = 10;
    string species = 11;
    string care_rules = 12;
    google.protobuf.Timestamp createdAt = 13;
    string userId = 14;
}

message CreatePlantV1Response {}

message GetFilteredPlantsV1Request{
    int64 page = 1;
    int64 size = 2;
    string sort = 3;
    bool isDesc = 4;
    message Filter {
        string species = 1;
        string type = 2;
        repeated string size = 3;
        repeated string lightCondition = 4;
        repeated string wateringFrequency = 5;
        repeated string temperatureRegime = 6;
        repeated string careComplexity = 7;
        string description = 8;
        string place = 9;
        float priceFrom = 10; 
        float priceTo = 11;  
    }
    Filter filter = 5;
}

message GetFilteredPlantsV1Response{
    message Plant {
        string id = 1;
        string image = 2;
        string species = 3; 
        float price = 4; 
        google.protobuf.Timestamp createdAt = 5;
        string place = 6;
    }
    repeated Plant plants = 1;
}

message GetPlantsV1Request {
    int64 page = 1;
    int64 size = 2;
    string sort = 3;
    bool isDesc = 4;
}

message GetPlantsV1Response {
    message Plant {
        string id = 1;
        string image = 2;
        string species = 3; 
        float price = 4; 
        google.protobuf.Timestamp createdAt = 5;
        string place = 6;
    }
    repeated Plant plants = 1;
}

message GetCareRuleV1Request {
    string species = 1;
}

message GetCareRuleV1Response {
    repeated CareRule careRules = 1;
}

message CareRule {
    message User {
        string userId = 1;
        string userName = 2;
        string userSurname = 3;
        string userFatherName = 4;
    }
    User user = 1;
    string description = 2;
    google.protobuf.Timestamp createdAt = 3;
}

message CreateNewCareRuleV1Request {
    string species = 1;
    string userId = 2;
    string descriptionAddition = 3;
}

message CreateNewCareRuleV1Response {}

message GetPlantsWithCareRulesV1Request {}
    
message GetPlantsWithCareRulesV1Response {
    message Plant {
        string species = 1;
        string image = 2;
        string id = 3;
    }
    repeated Plant plants = 1;
}

message GetPlantByIdV1Request{
    string id  = 1;
}
message GetPlantByIdV1Response{
    message Plant {
        string species = 1;
        string type = 2;
        string size = 3;
        string lightCondition = 4;
        string wateringFrequency = 5;
        string temperatureRegime = 6;
        string careComplexity = 7;
        string description = 8;
        string place = 9;
        string image = 10;
        float price = 11;
    }
    message User {
        string photo = 1;
        string name = 2;
        string surname = 3;
        string fatherName = 4;
    }
    Plant plant = 1;
    User user = 2;
}

message BuyPlantV1Request{
    string sellerId = 1;
    string buyerId = 2;
    string plantId = 3;
    string species = 4;
    float price = 5;
}
message BuyPlantV1Response{

}